--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garden Gala Invite</title>
     <link rel="stylesheet" type="text/css" href="styles.css"
     <script src="script.js"></script>
@@ -8,7 +9,7 @@
 
      <!-- Invitation GIF -->
      <div id="invitation" onclick="showGarden()">
-        <img src="ARTPRINTS.jpeg" alt="invitation" style="width:100%; height:100%;">
+        <img src="ARTPRINTS.jpeg" alt="invitation" style="width:100%; height:90%;">
     </div>
 
 </body>
