--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
         <img src="ARTPRINTS.jpeg" alt="invitation" style="width:100%; height:100%;">
     </div>
 
+      <!-- Container for Garden content -->
+      <div class="container" style="display:none;" id="gardenContent">
+        <img id="garden" src="IMG_1353.jpg" alt="Garden">
+
 </body>
 </html>
+
