--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garden Gala Invite</title>
-    <link rel="stylesheet" type="text/css" href="styles.css"
-    <script src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
 
-     <!-- Invitation GIF -->
-     <div id="invitation" onclick="showGarden()">
+    <!-- Invitation GIF -->
+    <div id="invitation" onclick="showGarden()">
         <img src="ARTPRINTS.jpeg" alt="invitation" style="width:100%; height:100%;">
     </div>
 
-      <!-- Container for Garden content -->
-      <div class="container" style="display:none;" id="gardenContent">
+    <!-- Container for Garden content -->
+    <div class="container" style="display:none;" id="gardenContent">
         <img id="garden" src="IMG_1353.jpg" alt="Garden">
+    </div>
 
 </body>
 </html>
