--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <div class="container" style="display:none;" id="gardenContent">
         <img id="garden" src="IMG_1353.jpg" alt="Garden">
     </div>
+    
+    <!-- Container for music -->
+  <p id="responseText"></p>
+    </div>
+    <audio id="audio" src="yescheckboxmusic.mp3"></audio>
 
 </body>
 </html>
