--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Container for music -->
   <p id="responseText"></p>
     </div>
-    <audio id="audio" src="yescheckboxmusic.mp3"></audio>
+    <audio id="audio" src="fairymusic.mp3"></audio>
 
 </body>
 </html>
