--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 
     <!-- Container for Garden content -->
     <div class="container" style="display:none;" id="gardenContent">
-        <img id="garden" src="IMG_1353.jpg" alt="Garden">
+        <img id="garden" src="IMG_1353 (1) 2.gif" (" alt="Garden">
     </div>
     
     <!-- Container for music -->
-    
     <audio id="audio" src="fairymusic.mp3"></audio>
 
 </body>
