--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     
     <!-- Container for music -->
-    <audio id="audio" src="fairymusic.mp3"></audio>
+    <audio id="audio" src="fairymusic.mp3" preload="auto"></audio>
 
 </body>
 </html>
